# muon-js

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  MQUICKJS_TESTS.md  Makefile  PARSER_ASSESSMENT.md  PLAN.md  PORTING_STATUS.md  PROGRESS.md  REFACTORING_PLAN.md  performance.md  readme.md  todo.md
.claude/: settings.local.json
.github/agents/: test-agent.agent.md
.github/workflows/: ci.yml  pages.yml  release.yml
archive/: T-000013.md  T-000014.md  T-000015.md  T-000018.md  T-000020.md  T-000021.md  T-000026.md  T-000027.md  T-000030.md  T-000032.md  T-000037.md  T-000040.md
devdocs/: ACTION_PLAN.md  CODE_REVIEW.md  PORTING_STATUS.md  PROGRESS.md  beta_release_readiness.md  js_runtime_benchmark_baseline.json  lua_js_perf_baseline.json  lua_js_perf_baseline.txt  mini_redis_persistence_spec.md  mt_bench_baseline.json  mt_bench_baseline.txt  muon_cache_persistence_spec.md  trafficlab_bench_baseline.json  trafficlab_demo_url.txt
docs/: muoncache-trafficlab-prd.md
examples/: eval.rs
samples/: 02_vars.js  03_arrays.js  05_strings.js  README.md
samples/fail/: 02_functions.js  39_in_operator.js  40_delete_operator.js  41_nullish_coalescing.js  42_optional_chaining.js
samples/pass/: 02_variables.js  04_null_undefined.js  06_objects.js  07_array_indexing.js  08_property_access.js  10_comparison.js  11_if_else.js  12_for_loop.js  13_while_loop.js  14_logical_operators.js  15_increment.js  16_compound_assignment.js  17_break_continue.js  18_ternary.js  19_modulo.js  20_nested_ternary.js  21_bitwise_and.js  22_bitwise_or.js  23_bitwise_xor.js  24_left_shift.js  25_right_shift.js  (+55 more)
scripts/: bench_scripting.py  bench_scripting_mt.py  mini_redis_benchmark.py  mini_redis_sample_client.py  muon_cache_benchmark.py  muon_cache_sample_client.py  pick_port.py  read_mini_redis_db.py  read_muon_cache_db.py  run_lua_js_3rounds.py  sync_version.sh
src/: api.rs  api.rs.backup  api.rs.tmp  bytecode.rs  compiler.rs  context.rs  evals.rs  helpers.rs  json.rs  lib.rs  parser.rs  types.rs  value.rs  vm.rs
tests/: check_mquickjs_compatibility.sh  mini_redis_parity.py  muon_cache_parity.py  run_integration.sh  run_mquickjs_tests.sh  run_perf_benchmark.sh  samples.rs  test_basic_features.sh
tickets/: T-000001.md  T-000002.md  T-000003.md  T-000004.md  T-000005.md  T-000006.md  T-000007.md  T-000008.md  T-000009.md  T-000010.md  T-000011.md  T-000012.md  T-000013.md  T-000014.md  T-000015.md  T-000016.md  T-000017.md  T-000018.md  T-000019.md  T-000020.md  T-000021.md  T-000022.md  T-000023.md  T-000025.md  T-000029.md  T-000031.md  T-000032.md  T-000033.md  T-000034.md  T-000035.md  T-000036.md  T-000037.md  T-000038.md  T-000039.md  T-000040.md  T-000041.md  T-000042.md  T-000043.md  T-000044.md  T-000045.md  (+78 more)
tools/: check_js_runtime_bench.py  compare_benchmarks.py  lua_js_mt_bench.py  lua_js_perf_gate.py
trafficlab/: Cargo.toml  Makefile  app.js  bench.py  idm.js  index.html
trafficlab/muon_cache_wasm/: muon_js.d.ts  muon_js.js  muon_js_bg.wasm  muon_js_bg.wasm.d.ts
trafficlab/src/: lib.rs
wasm/: wasm_redis_showcase_ideas.md
work_product/: closure3_test.js  debug_closure3.js  debug_func_newline.js  readme.md  test_for_in_debug.js  test_rect.js
(+178 files in other folders)
