[package]
name = "muon-js"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "muon_js"
path = "src/lib.rs"

[features]
# Keep default minimal; add feature flags as ports land.
default = []
mini-redis = ["async-std"]
mini-redis-libsql = ["async-std", "libsql"]

[dependencies]
regex = "1.10.3"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
libsql = { version = "0.4.0", optional = true }

[dev-dependencies]
