[package]
name = "muon-js"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "muon_js"
path = "src/lib.rs"

[features]
# Keep default minimal; add feature flags as ports land.
default = []
mini-redis = ["tokio", "ctrlc", "mimalloc"]
mini-redis-libsql = ["tokio", "libsql", "crossbeam-channel"]

[dependencies]
regex = "1.10.3"
fancy-regex = "0.13.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"], optional = true }
libsql = { version = "0.4.0", optional = true }
ctrlc = { version = "3.4.2", optional = true }
crossbeam-channel = { version = "0.5.13", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
