[package]
name = "muon-js"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
name = "muon_js"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
# Keep default minimal; add feature flags as ports land.
default = []
muoncache-core = []
muoncache = ["muoncache-core", "tokio", "ctrlc", "mimalloc"]
muoncache-libsql = ["muoncache", "libsql", "crossbeam-channel"]
muoncache-wasm = [
    "muoncache-core",
    "dep:wasm-bindgen",
    "dep:serde",
    "dep:serde-wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
]

[dependencies]
regex = "1.10.3"
fancy-regex = "0.13.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"], optional = true }
libsql = { version = "0.4.0", optional = true }
ctrlc = { version = "3.4.2", optional = true }
crossbeam-channel = { version = "0.5.13", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Performance"], optional = true }

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
