[package]
name = "trafficlab"
version = "0.1.0"
edition = "2021"
description = "MuonCache TrafficLab — WASM traffic simulation demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Performance",
    "Window",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
